--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading...
+    <img src="/assets/loading.jpg" alt="Please Stand By">
+  </app-root>
 </body>
 </html>
